renamed:    rssharp-src/libsharp2/default.nix -> default.nix 	modified:   rssharp-src/build.rs 	modified:   rssharp-src/libsharp2/Makefile 	modified:   rssharp-src/src/lib.rs 	modified:   rssharp-sys/src/lib.rs 	modified:   rssharp-sys/src/main.rs 	new file:   rssharp/src/alm.rs 	new file:   rssharp/src/bin/test_pol.rs 	new file:   rssharp/src/bin/test_spin.rs 	modified:   rssharp/src/ffi.rs 	modified:   rssharp/src/lib.rs 	modified:   rssharp/src/main.rs 	modified:   rssharp/src/transform.rs

--- a/rssharp-src/libsharp2/Makefile
+++ b/rssharp-src/libsharp2/Makefile
@@ -2,14 +2,16 @@ all: lib/libsharp.a
 py: pysharp.so
 
 
-%.o: src/%.c
+obj/%.o: src/%.c
+	mkdir -p obj
 	$(CC) $< -o $@ -c -I . -fPIC -g -O2
 
-%.o: src/%.cxx
+obj/%.o: src/%.cxx
+	mkdir -p obj
 	$(CXX) $< -o $@ -c -I . -fPIC -g -O2
 
 
-lib/libsharp.a: pocketfft.o sharp_almhelpers.o sharp.o sharp_core.o sharp_core_inc.o sharp_geomhelpers.o sharp_legendre_roots.o sharp_utils.o sharp_ylmgen_c.o
+lib/libsharp.a: obj/pocketfft.o obj/sharp_almhelpers.o obj/sharp.o obj/sharp_core.o obj/sharp_core_inc.o obj/sharp_geomhelpers.o obj/sharp_legendre_roots.o obj/sharp_utils.o obj/sharp_ylmgen_c.o
 	mkdir -p lib
 	$(AR) cr $@ $^ 
 	
@@ -19,7 +21,10 @@ pysharp.so: py/pysharp.cc lib/libsharp.a
 	$(CXX) -o $@ $< -I . `pkg-config --cflags python3` -L ./lib -lsharp  --shared -fPIC -O2
 
 test: map2alm2map_test.cpp lib/libsharp.a
-	g++ -o $@ $< -I include -L ./lib -lsharp -lm
+	g++ -o $@ $< -I . -L ./lib -lsharp -lm
+
+test_spin: test_spin.cpp lib/libsharp.a
+	g++ -o $@ $< -I . -L ./lib -lsharp -lm
 
 clean: 
 	$(RM) *.o
