modified:   Cargo.toml 	modified:   rssharp-src/Cargo.toml 	modified:   rssharp-sys/Cargo.toml 	modified:   rssharp/Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,7 @@
 [workspace]
 members = [
-  "rssharp-sys",
-  "rssharp-src",
-  "rssharp",
+    'rssharp-sys',
+    'rssharp-src',
+    'rssharp',
 ]
-
-resolver="2"
+resolver = '2'
