--- a/rssharp-sys/Cargo.toml
+++ b/rssharp-sys/Cargo.toml
@@ -1,10 +1,10 @@
-[package]
-name = "rssharp-sys"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-num='0.4.0'
-rssharp-src={path="../rssharp-src"}
+num = '0.4.0'
+
+[dependencies.rssharp-src]
+path = '../rssharp-src'
+
+[package]
+edition = '2021'
+name = 'rssharp-sys'
+version = '0.1.0'
