--- a/rssharp/Cargo.toml
+++ b/rssharp/Cargo.toml
@@ -1,10 +1,10 @@
-[package]
-name = "rssharp"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-rssharp-sys={path="../rssharp-sys"}
-num='0.4.0'
+num = '0.4.0'
+
+[dependencies.rssharp-sys]
+path = '../rssharp-sys'
+
+[package]
+edition = '2021'
+name = 'rssharp'
+version = '0.1.0'
